--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!doctype html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
-    <title>Personal page</title>
+    <title>Roman Naumenko-Vahnitsky</title>
+    <meta name="description" content="Персональная страница Рома Науменко-Вахницкого, WEB-Developer">
+
+    <meta property="og:title" content="Roman Naumenko-Vahnitsky">
+    <meta property="og:description" content="Персональная страница Рома Науменко-Вахницкого, WEB-Developer">
+    <meta property="og:url" content="http://nauma.github.io/">
+    <meta property="og:image" content="http://nauma.github.io/assets/images/me.jpg"> 
+
+    <link rel="stylesheet" href="http://nauma.github.io/assets/css/main.css">
   </head>
   <body>
-    Hello world!
+    <div id="cover">&nbsp;</div>
+    <main>
+      <img src="http://nauma.github.io/assets/images/me.jpg" alt="Roma Naumenko-Vahnitsky">
+      <h1>Roma Naumenko-Vahnitsky</h1>
+      <p>WEB-Developer</p>
+    </main>
   </body>
 </html>
