--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
     <meta property="og:title" content="Roman Naumenko-Vahnitsky">
     <meta property="og:description" content="Персональная страница Рома Науменко-Вахницкого, WEB-Developer">
-    <meta property="og:url" content="http://nauma.github.io/">
-    <meta property="og:image" content="http://nauma.github.io/assets/images/me.jpg"> 
+    <meta property="og:url" content="https://nauma.github.io/">
+    <meta property="og:image" content="https://nauma.github.io/assets/images/me.jpg"> 
 
-    <link rel="stylesheet" href="http://nauma.github.io/assets/css/main.css">
+    <link rel="stylesheet" href="https://nauma.github.io/assets/css/main.css">
   </head>
   <body>
     <div id="cover">&nbsp;</div>
     <main>
-      <img src="http://nauma.github.io/assets/images/me.jpg" alt="Roma Naumenko-Vahnitsky">
+      <img src="https://nauma.github.io/assets/images/me.jpg" alt="Roma Naumenko-Vahnitsky">
       <h1>Roma Naumenko-Vahnitsky</h1>
       <p>WEB-Developer</p>
     </main>
