--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Roman Naumenko-Vahnitsky</title>
     <meta name="description" content="Персональная страница Рома Науменко-Вахницкого, WEB-Developer">
 
