--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div id="cover">&nbsp;</div>
+    <div class="black">&nbsp;</div>
     <main>
       <img src="https://nauma.github.io/assets/images/me.jpg" alt="Roma Naumenko-Vahnitsky">
       <h1>Roma Naumenko-Vahnitsky</h1>
