--- a/Apple/index.html
+++ b/Apple/index.html
@@ -4,7 +4,7 @@
   <title>Магазин оригинальной техники Apple</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
@@ -383,6 +383,6 @@
       <button id="close-menu">Закрыть</button>
     </div>
   </header>
-  <script type="text/javascript" src="/js/main.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
