--- a/Apple/index.html
+++ b/Apple/index.html
@@ -10,16 +10,16 @@
 <body>
 
   <content>
-    <div id="block" class="header">
+    <div id="header" class="block">
       <div class="header_text revealator-slideup">
         <h1>Магазин оригинальной техники Apple</h1>
         <p>Выгодные цены. Доставка в день заказа</p>
-        <button class="gotext button">Товары со скидкой</button>
+        <a class="gotext button" href="#catalog">Товары со скидкой</a>
       </div>
-      <button class="goto">&nbsp;</button>
+      <a class="goto" href="#catalog">&nbsp;</a>
     </div>
 
-    <div id="block" class="catalog">
+    <div id="catalog" class="block">
       <div class="content">
         <h1>Каталог продукции</h1>
         <p>Выберите нужную для вас модель iPhone</p>
@@ -69,7 +69,7 @@
 
     </div>
 
-    <div id="block" class="select">
+    <div id="select" class="block">
       <div class="content iphone5s">
         <div class="item phone_color_photos revealator-slideright">
           <h2 class="name">iPhone 5s</h2>
@@ -504,7 +504,7 @@
           <div class="image iphone7plus_pink" style="display: none;">&nbsp;</div>
         </div>
 
-        <div class="buy_form ">
+        <div class="buy_form revealator-slideleft">
           <div class="block">
             <h3>Выберите цвет:</h3>
             <div class="select select_color">
@@ -587,7 +587,7 @@
       </div>
     </div>
 
-    <div id="block" class="vantage">
+    <div id="vantage" class="block">
       <div class="left_image revealator-slideright">&nbsp;</div>
       <div class="right_image revealator-slideleft">&nbsp;</div>
       <div class="content revealator-slideup">
@@ -621,7 +621,7 @@
       </div>
     </div>
 
-    <div id="block" class="benefit">
+    <div id="benefit" class="block">
       <div class="content revealator-slideup">
         <h2>Покупая iPhone у нас вы получаете</h2>
         <div class="block">
@@ -661,7 +661,7 @@
       </div>
     </div>
 
-    <div id="block" class="guarantee revealator-slideup">
+    <div id="guarantee" class="block revealator-slideup">
       <div class="content ">
         <div class="left">
           <h2>Гарантия и поддержка</h2>
@@ -673,7 +673,7 @@
       </div>
     </div>
 
-    <div id="block" class="delivery">
+    <div id="delivery" class="block">
       <div class="content">
         <h2 class="revealator-slideup">Доставка и самовывоз</h2>
         <h3 class="revealator-slideup">Быстро и надежно</h3>
@@ -695,7 +695,7 @@
       </div>
     </div>
 
-    <div id="block" class="about">
+    <div id="about" class="block">
       <div class="content revealator-slideup">
         <h2>Наша компания</h2>
         <div class="text">Наш магазин существует с 2014 года и специализируется на оптоворозничной торговле
@@ -707,7 +707,7 @@
       </div>
     </div>
 
-    <div id="block" class="reviews">
+    <div id="reviews" class="block">
       <div class="content">
         <h2 class="revealator-slideup">Отзывы покупателей el apple</h2>
         <div class="left item revealator-slideleft">&nbsp;</div>
@@ -749,7 +749,7 @@
       </div>
     </div>
 
-    <div id="block" class="buy">
+    <div id="buy" class="block">
       <div class="content">
         <h2 class="revealator-slideup">Оформление заказа</h2>
         <div class="description revealator-slideup">Заполните форму, и наши менеджеры свяжутся с вами в течении часа</div>
@@ -779,7 +779,7 @@
       </div>
     </div>
 
-    <div id="block" class="map">
+    <div id="map" class="block">
       <div class="content revealator-slideup">
         <h2>Контакты</h2>
         <div class="text">
@@ -799,7 +799,7 @@
     </div>
   </content>
 
-  <footer>
+  <footer id="footer">
     <div class="copy">&copy; 2016 Copyright.</div>
     <div class="author">Розработка Fame-us.ru</div>
     <div class="phone">+7(910)-002-25-05</div>
@@ -816,12 +816,12 @@
 
       <div id="menu">
         <div class="list">
-          <a class="item">Каталог</a>
-          <a class="item">Гарантия и поддержка</a>
-          <a class="item">О компании</a>
-          <a class="item">Доставка</a>
-          <a class="item">Отзывы</a>
-          <a class="item">Контакты</a>
+          <a class="item" href="#catalog">Каталог</a>
+          <a class="item" href="#guarantee">Гарантия и поддержка</a>
+          <a class="item" href="#about">О компании</a>
+          <a class="item" href="#delivery">Доставка</a>
+          <a class="item" href="#reviews">Отзывы</a>
+          <a class="item" href="#buy">Контакты</a>
           <br>
           <a class="item hide">8-968-590-60-58</a>
         </div>
