--- a/Apple/index.html
+++ b/Apple/index.html
@@ -794,7 +794,7 @@
         height="500px"
         frameborder="0" style="border:0"
         src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDEKBGXvKLDaAZ7tAnfIlqyThVuqBXIEMU
-          &q=Ukraine+Kiev+Майдан" allowfullscreen>
+          &q=г.Москва, Багратионовский проезд д.7" allowfullscreen>
       </iframe>
     </div>
   </content>
